# ball-game

./: Cargo.toml  LICENSE  README.md  bevy-ball-game-12ee5b665ecfabf9.js  bevy-ball-game-1f8043745dcb4a4e.js  bevy-ball-game-28ea46f0c7c679a.js  bevy-ball-game-37624efe3353829.js  bevy-ball-game-40b7c46fb68c5c0e.js  bevy-ball-game-7c7ff10198d20e80.js  bevy-ball-game-8009e97e8d386ae7.js  bevy-ball-game-ac24d966e9b4fbe0.js  bevy-ball-game-d3c33d912655e099.js  index.html
.github/workflows/: ci.yml  release.yaml
credits/: CREDITS.md
src/: events.rs  helpers.rs  main.rs  systems.rs
src/enemy/: mod.rs  systems.rs
src/game/: mod.rs  systems.rs
src/game/enemy/: mod.rs  resources.rs  systems.rs
src/game/player/: mod.rs  resources.rs  systems.rs
src/game/score/: mod.rs  systems.rs
src/game/star/: mod.rs  systems.rs
src/game/ui/: mod.rs
src/game/ui/game_over_menu/: components.rs  mod.rs  styles.rs
src/game/ui/game_over_menu/systems/: interactions.rs  layout.rs  updates.rs
src/game/ui/hud/: components.rs  mod.rs  resources.rs  styles.rs
src/game/ui/hud/systems/: layout.rs  updates.rs
src/game/ui/pause_menu/: mod.rs
src/game/ui/pause_menu/systems/: interactions.rs  layout.rs  mod.rs
src/main_menu/: mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/player/: mod.rs  systems.rs
src/score/: mod.rs  resources.rs  systems.rs
src/star/: mod.rs  systems.rs
